kubernetes-resources/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  gateways:
    - argocd-gateway
  hosts:
    - "argocd.cat.local"
  http:
    - name: argocd-server
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
